--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -128,8 +128,26 @@
     <h2 class="products_title raise">Products</h2>
   </div>
   <div class="product_field">
-    <img src="myself.jpg">
-    <img src="furima.jpg">
+    <a href="https://myself827.herokuapp.com/"><img src="myself.jpg" >
+    <div class="mask1"></div>
+    <div class="mask2"></div>
+    <div class="myself_text">
+		<p>趣味特化型マッチング<br>myself</p>
+    </div>
+    </a>
   </div>
+  <div class="product_field2">
+    <a href="http://54.249.185.167/"><img src="furima.jpg" >
+    <div class="mask1"></div>
+    <div class="mask2"></div>
+    <div class="furima_text">
+		<p>チーム開発、フリマアプリ<br>FURIMA</p>
+    </div>
+    </a>
+  </div>
+</div>
+<div class="footer">
+  <a href="https://twitter.com/masa_kino"><i class="fab fa-twitter fa-3x"></i></a>
+  <a href="https://github.com/masa-ki11"><i class="fab fa-github fa-3x"></i></a>
 </div>
 <%= javascript_pack_tag 'port' %>
