--- a/app/assets/stylesheets/homes.scss
+++ b/app/assets/stylesheets/homes.scss
@@ -217,11 +217,136 @@
       }
     }
   }
-  
+  .product_field {
+    position: relative;
+    width:			100vw;
+    height:			860px;
+    overflow:		hidden;
+    
+  }
+  .product_field .myself_text {
+    width:			100%;
+    height:			100%;
+    visibility:		hidden;
+    font-size: 50px;
+    color:			#fff;
+    top: 0;
+    left: 0;
+    position:		absolute;
+    text-align:		center;
+    -webkit-transition:	all 0.4s step-end;
+    transition:		all 0.4s step-end;
+  }
+  .product_field:hover .myself_text {
+    visibility:		visible;
+  }
+  .product_field .myself_text p {
+    font-size:		130%;
+    padding-top:		75px;
+    color:			#fff;
+    opacity:		0;
+  }
+  .product_field:hover .myself_text p {
+    opacity:		1;
+  }
+  .product_field .mask1, .product_field .mask2 {
+    width:			100%;
+    height:			50%;
+    position:		absolute;
+    left:			0;
+    background-color:	rgba(0,0,0,0.4);
+    -webkit-transition:	all 0.4s ease;
+    transition:		all 0.4s ease;
+  }
+  .product_field .mask1 {
+    top:			-50%;
+  }
+  .product_field:hover .mask1 {
+    top:			0;
+  }
+  .product_field .mask2 {
+    bottom:			-50%;
+  }
+  .product_field:hover .mask2 {
+    bottom:			0;
+  }
+  .product_field2 {
+    position: relative;
+    width:			100vw;
+    height:			860px;
+    overflow:		hidden;
+    margin: 20px 0;
+  } 
+  .product_field2 .furima_text {
+    width:			100%;
+    height:			100%;
+    visibility:		hidden;
+    font-size: 50px;
+    color:			#fff;
+    top: 0;
+    left: 0;
+    position:		absolute;
+    text-align:		center;
+    -webkit-transition:	all 0.4s step-end;
+    transition:		all 0.4s step-end;
+  }
+  .product_field2:hover .furima_text {
+    visibility:		visible;
+  }
+  .product_field2 .furima_text p {
+    font-size:		130%;
+    padding-top:		75px;
+    color:			#fff;
+    opacity:		0;
+  }
+  .product_field2:hover .furima_text p {
+    opacity:		1;
+  }
+  .product_field2 .mask1, .product_field2 .mask2 {
+    width:			100%;
+    height:			50%;
+    position:		absolute;
+    left:			0;
+    background-color:	rgba(0,0,0,0.4);
+    -webkit-transition:	all 0.4s ease;
+    transition:		all 0.4s ease;
+  }
+  .product_field2 .mask1 {
+    top:			-50%;
+  }
+  .product_field2:hover .mask1 {
+    top:			0;
+  }
+  .product_field2 .mask2 {
+    bottom:			-50%;
+  }
+  .product_field2:hover .mask2 {
+    bottom:			0;
+  }
+
   img {
     width: 100vw;
-    padding: 20px 0;
+    height: 860px;
+    
     box-shadow: 0 0 5px rgba(0,0,0,.1);
   }
 
 }
+.footer {
+  align-items: center;
+  margin-top: 520px;
+  display: flex;
+  justify-content: center;
+  height: 200px;
+  width: 100vw;
+  background: repeating-linear-gradient(45deg, #2b2b2b 0%, #2b2b2b 10%, #222222 0%, #222222 50%) 0 / 15px 15px;
+}
+.fa-twitter {
+  color: #65a2ee;
+  padding: 0 20px;
+}
+.fa-github {
+  color: white;
+  padding: 0 20px;
+}
+
