--- a/app/assets/stylesheets/homes.scss
+++ b/app/assets/stylesheets/homes.scss
@@ -93,7 +93,7 @@
   }
 }
 .skills {
-  height: 1450px;
+  height: 1750px;
   width: 100vw;
   text-align: center;
   .skill_info {
@@ -169,6 +169,12 @@
   }
   .heroku {
     color: #C9C3E6;
+  }
+  .ruby {
+    width: 80px;
+  }
+  .rails {
+    width: 80px;
   }
 }
 
