--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -112,6 +112,19 @@
         <li>Java</li>
         <li>2weeks</li>
       </ul>
+    <div v-if="this.show" class="icon">
+      <img class="ruby" src="ruby.png">
+      <ul class="Ruby">
+        <li>Ruby</li>
+        <li>3months</li>
+    </div>
+    <div v-if="this.show" class="icon">
+      <img class="rails" src="rails.png">
+      <ul class="Rails">
+        <li>Rails</li>
+        <li>3months</li>
+    
+    </div>
     </div>
     </div>
     </div>
