--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -43,7 +43,7 @@
   <h2 class="title">About</h2>
   <h3 class="text">
     2020年6月よりプログラミング未経験から某スクールでの学習を開始<br>
-    スクールにて、HTML/CSS,Ruby,Ruby,Ruby on Rails,JavaScript,jQuery<br>
+    スクールにて、HTML/CSS,Ruby,Ruby on Rails,JavaScript,jQuery<br>
     スクール卒業後の現在、Vue.js,Javaの学習を開始<br>
     在学中に個人制作、チーム開発を経験
   </h3>
