--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -158,7 +158,14 @@
     </div>
     </a>
   </div>
+  <div class="report">
+    <img src="repo.jpg">
+    <p>自動日報送信システム。<br>
+      設定時刻になると、タスクを実行。<br>
+      xlsxファイルを読み込み、計算してline送信する。</p>
+  </div>
 </div>
+
 <div class="footer">
   <a href="https://twitter.com/masa_kino"><i class="fab fa-twitter fa-3x"></i></a>
   <a href="https://github.com/masa-ki11"><i class="fab fa-github fa-3x"></i></a>
