--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -159,7 +159,7 @@
     </a>
   </div>
   <div class="report">
-    <img src="repo.jpg">
+    <img src="https://user-images.githubusercontent.com/67939220/93079308-e1c59000-f6c6-11ea-80dd-3143081a1450.gif">
     <p>自動日報送信システム。<br>
       設定時刻になると、タスクを実行。<br>
       xlsxファイルを読み込み、計算してline送信する。</p>
