--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -169,7 +169,7 @@
 </div>
 
 <div class="footer">
-  <a href="https://twitter.com/masa_kino"><i class="fab fa-twitter fa-3x"></i></a>
-  <a href="https://github.com/masa-ki11"><i class="fab fa-github fa-3x"></i></a>
+  <a href="https://twitter.com/masa_kino" target="_blank" rel="noopener noreferrer"><i class="fab fa-twitter fa-3x"></i></a>
+  <a href="https://github.com/masa-ki11" target="_blank" rel="noopener noreferrer"><i class="fab fa-github fa-3x"></i></a>
 </div>
 <%= javascript_pack_tag 'port' %>
