--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -152,7 +152,7 @@
     <h2 class="products_title raise">Products</h2>
   </div>
   <div class="product_field">
-    <a href="https://myself827.herokuapp.com/"><img src="myself.jpg" >
+    <a href="https://myself827.herokuapp.com/" target="_blank" rel="noopener noreferrer"><img src="myself.jpg" >
     <div class="mask1"></div>
     <div class="mask2"></div>
     <div class="myself_text">
@@ -161,7 +161,7 @@
     </a>
   </div>
   <div class="product_field2">
-    <a href="http://54.249.185.167/"><img src="furima.jpg" >
+    <a href="http://54.249.185.167/" target="_blank" rel="noopener noreferrer"><img src="furima.jpg" >
     <div class="mask1"></div>
     <div class="mask2"></div>
     <div class="furima_text">
