--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -183,4 +183,5 @@
   <a href="https://twitter.com/masa_kino" target="_blank" rel="noopener noreferrer"><i class="fab fa-twitter fa-3x"></i></a>
   <a href="https://github.com/masa-ki11" target="_blank" rel="noopener noreferrer"><i class="fab fa-github fa-3x"></i></a>
 </div>
+<a href="/homes/new"><img src="test.jpg" >
 <%= javascript_pack_tag 'port' %>
