--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -183,10 +183,10 @@
   <a href="https://twitter.com/masa_kino" target="_blank" rel="noopener noreferrer"><i class="fab fa-twitter fa-3x"></i></a>
   <a href="https://github.com/masa-ki11" target="_blank" rel="noopener noreferrer"><i class="fab fa-github fa-3x"></i></a>
 </div>
-<a-scene>
+<%# <a-scene>
   <a-assets>
     <img id="sky" src="test.jpg">
   </a-assets>
   <a-sky src="#sky"></a-sky>
-</a-scene>
+</a-scene> %>
 <%= javascript_pack_tag 'port' %>
