--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
     <%= csp_meta_tag %>
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
-    <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
+    <%# <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script> %>
   </head>
 
   <body>
